app/src/main/java/com/example/architecture/bad/myfigurecollection/MainActivity.java
package com.example.architecture.bad.myfigurecollection;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

public class MainActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_main);
    }
}
